proper enkamax.com

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enkamax-v3",
-  "homepage": "https://https://enkamax.com/#/",
+  "homepage": "https://https://enkamax.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
